# number-generator

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README_EN.md  TODO.md  docker-compose.yml  prompt.md
src/: lib.rs  main.rs  number_assembler.rs  prefix_rule.rs  prefix_rule_manager.rs  redis_prefix_rule_manager.rs  sequence_generator.rs
tests/e2e/: cross_prefix_isolation.hurl  generate_number.hurl  idempotent_registration.hurl  invalid_format_registration.hurl  network_partitioning.hurl
