[package]
name = "number-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.24.0", features = ["tokio-comp"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"
chrono = "0.4"
prometheus = { version = "0.13", features = ["process"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
