[package]
name = "number-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.21", features = ["aio", "async-std-comp", "tokio-comp"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1.77"
regex = "1"
chrono = "0.4"
